--- a/src/style/_body.scss
+++ b/src/style/_body.scss
@@ -1,11 +1,26 @@
 body {
     margin: auto;
-    width: 800px;
+    width: 1100px;
     background-color: black;
     color: white;
     text-align: center;
 }
 
-.videoMov {
-    width: 100%;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+.switchArrow {
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    border: 2px solid white;
 }
