--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -1,3 +1,8 @@
 header {
     background-color: orange;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: '2px solid white',
 }
