--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,17 +1,37 @@
 body {
   margin: auto;
-  width: 800px;
+  width: 1100px;
   background-color: black;
   color: white;
   text-align: center;
 }
 
-.videoMov {
-  width: 100%;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+.switchArrow {
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  border: 2px solid white;
 }
 
 header {
   background-color: orange;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: "2px solid white";
 }
 
 footer {
