Ajout de style et de hauteur

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,3 +1,7 @@
 footer {
     background-color: orange;
+    height: 85px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
