nouveau rendu background

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     background-color: orange;
-    height: 85px;
+    height: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
