--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -1,6 +1,6 @@
 header {
     background-color: orange;
-    height: 120px;
+    height: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
