--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,8 +4,36 @@ body {
   background-color: black;
   color: white;
   text-align: center;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 15s ease infinite;
+          animation: gradient 15s ease infinite;
+  height: 100vh;
 }
 
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 h1,
 h2,
 h3,
@@ -24,8 +52,8 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 700px;
-  background-color: rgba(240, 248, 255, 0.192);
+  height: 70vh;
+  background-color: rgba(20, 20, 20, 0.11);
 }
 
 .switchArrow {
@@ -50,7 +78,7 @@ button {
 
 header {
   background-color: orange;
-  height: 120px;
+  height: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,7 +87,7 @@ header {
 
 footer {
   background-color: orange;
-  height: 85px;
+  height: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
