--- a/src/style/_body.scss
+++ b/src/style/_body.scss
@@ -1,6 +1,6 @@
 body {
     margin: auto;
-    width: 1100px;
+    max-width: 1100px;
     background-color: black;
     color: white;
     text-align: center;
@@ -43,7 +43,13 @@ button {
     justify-content: center;
     align-items: center;
     height: 70vh;
+    margin: 5vh auto;
     background-color: rgba(20, 20, 20, 0.11);
+    border-radius: 20px;
+}
+
+.videoSize {
+    width: 800px;
 }
 
 .switchArrow {
@@ -64,4 +70,14 @@ button {
 
 .switchArrow:hover {
     transform: scale(1.2);
+}
+
+@media only screen and (max-width: 962px) {
+    .videoSize {
+        width: 280px;
+    }
+
+    .switchArrow {
+        width: 25px;
+    }
 }
