--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,7 +1,25 @@
 footer {
-    background-color: orange;
     height: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 20px;
+    background: linear-gradient(-45deg, #23a6d5, #23d5ab, #ee7752, #e73c7e);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 10vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
