--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -4,5 +4,10 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: '2px solid white',
+    border: '2px solid white';
+    background: linear-gradient(-45deg, #23a6d5, #23d5ab, #ee7752, #e73c7e);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 10vh;
+    border-radius: 20px;
 }
