--- a/src/style/_body.scss
+++ b/src/style/_body.scss
@@ -78,6 +78,30 @@ button {
     }
 
     .switchArrow {
-        width: 25px;
+        width: 20px;
+    }
+
+    .video_Container {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .switchArrow {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    button {
+        width: 280px;
+        margin: 5px auto;
+    }
+
+    .videoSize {
+        height: 350px;
+    }
+
+    .switchArrow:hover {
+        transform: scale(1.1);
     }
 }
