--- a/src/style/index.css
+++ b/src/style/index.css
@@ -87,7 +87,26 @@ button {
     width: 280px;
   }
   .switchArrow {
-    width: 25px;
+    width: 20px;
+  }
+  .video_Container {
+    flex-direction: column;
+  }
+}
+@media only screen and (max-width: 350px) {
+  .switchArrow {
+    width: 100%;
+    flex-direction: column;
+  }
+  button {
+    width: 280px;
+    margin: 5px auto;
+  }
+  .videoSize {
+    height: 350px;
+  }
+  .switchArrow:hover {
+    transform: scale(1.1);
   }
 }
 header {
