--- a/src/style/_body.scss
+++ b/src/style/_body.scss
@@ -1,5 +1,5 @@
 body {
-    margin: auto;
+    margin: 0 auto;
     max-width: 1100px;
     background-color: black;
     color: white;
@@ -7,7 +7,6 @@ body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    height: 100vh;
 }
 
 @keyframes gradient {
@@ -34,8 +33,12 @@ h6 {
 }
 
 button {
-    background-color: black;
+    background-color: none;
     margin: auto;
+    background-color: rgb(240, 24, 0);
+    border: 3px rgb(255, 255, 255) solid;
+    margin: 0 auto;
+    border-radius: 10px;
 }
 
 .video_Container {
@@ -43,7 +46,7 @@ button {
     justify-content: center;
     align-items: center;
     height: 70vh;
-    margin: 5vh auto;
+    margin: 6vh auto;
     background-color: rgba(20, 20, 20, 0.11);
     border-radius: 20px;
 }
@@ -59,12 +62,8 @@ button {
     align-items: center;
     height: 30px;
     width: 50px;
-    background-color: rgb(240, 24, 0);
-    border: 3px rgb(255, 255, 255) solid;
-    margin: 0 auto;
     text-align: center;
     color: white;
-    border-radius: 10px;
     transition: ease-in-out 200ms;
 }
 
@@ -79,6 +78,7 @@ button {
 
     .switchArrow {
         width: 20px;
+        height: 50px;
     }
 
     .video_Container {
@@ -93,15 +93,15 @@ button {
     }
 
     button {
-        width: 280px;
-        margin: 5px auto;
+        width: 270px;
+        margin: 1vh auto;
     }
 
     .videoSize {
-        height: 350px;
+        height: 50vh;
     }
 
     .switchArrow:hover {
-        transform: scale(1.1);
+        transform: scale(1.05);
     }
 }
