--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,13 +1,13 @@
 footer {
-    height: 15vh;
     display: flex;
+    margin: 1vh auto;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
     background: linear-gradient(-45deg, #23a6d5, #23d5ab, #ee7752, #e73c7e);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    height: 10vh;
+    height: 8vh;
 }
 
 @keyframes gradient {
