--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -1,13 +1,13 @@
 header {
     background-color: orange;
-    height: 15vh;
+    height: 8vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 1vh auto;
     border: '2px solid white';
     background: linear-gradient(-45deg, #23a6d5, #23d5ab, #ee7752, #e73c7e);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    height: 10vh;
     border-radius: 20px;
 }
