--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: auto;
+  margin: 0 auto;
   max-width: 1100px;
   background-color: black;
   color: white;
@@ -8,7 +8,6 @@ body {
   background-size: 400% 400%;
   -webkit-animation: gradient 15s ease infinite;
           animation: gradient 15s ease infinite;
-  height: 100vh;
 }
 
 @-webkit-keyframes gradient {
@@ -44,8 +43,12 @@ h6 {
 }
 
 button {
-  background-color: black;
+  background-color: none;
   margin: auto;
+  background-color: rgb(240, 24, 0);
+  border: 3px rgb(255, 255, 255) solid;
+  margin: 0 auto;
+  border-radius: 10px;
 }
 
 .video_Container {
@@ -53,7 +56,7 @@ button {
   justify-content: center;
   align-items: center;
   height: 70vh;
-  margin: 5vh auto;
+  margin: 6vh auto;
   background-color: rgba(20, 20, 20, 0.11);
   border-radius: 20px;
 }
@@ -69,12 +72,8 @@ button {
   align-items: center;
   height: 30px;
   width: 50px;
-  background-color: rgb(240, 24, 0);
-  border: 3px rgb(255, 255, 255) solid;
-  margin: 0 auto;
   text-align: center;
   color: white;
-  border-radius: 10px;
   transition: ease-in-out 200ms;
 }
 
@@ -88,6 +87,7 @@ button {
   }
   .switchArrow {
     width: 20px;
+    height: 50px;
   }
   .video_Container {
     flex-direction: column;
@@ -99,34 +99,34 @@ button {
     flex-direction: column;
   }
   button {
-    width: 280px;
-    margin: 5px auto;
+    width: 270px;
+    margin: 1vh auto;
   }
   .videoSize {
-    height: 350px;
+    height: 50vh;
   }
   .switchArrow:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 }
 header {
   background-color: orange;
-  height: 15vh;
+  height: 8vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 1vh auto;
   border: "2px solid white";
   background: linear-gradient(-45deg, #23a6d5, #23d5ab, #ee7752, #e73c7e);
   background-size: 400% 400%;
   -webkit-animation: gradient 15s ease infinite;
           animation: gradient 15s ease infinite;
-  height: 10vh;
   border-radius: 20px;
 }
 
 footer {
-  height: 15vh;
   display: flex;
+  margin: 1vh auto;
   justify-content: center;
   align-items: center;
   border-radius: 20px;
@@ -134,7 +134,7 @@ footer {
   background-size: 400% 400%;
   -webkit-animation: gradient 15s ease infinite;
           animation: gradient 15s ease infinite;
-  height: 10vh;
+  height: 8vh;
 }
 
 @keyframes gradient {
