--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -10,4 +10,5 @@ header {
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     border-radius: 20px;
+    width: 95%;
 }
