--- a/src/style/_body.scss
+++ b/src/style/_body.scss
@@ -9,6 +9,12 @@ body {
     animation: gradient 15s ease infinite;
 }
 
+* {
+    margin: 0;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
@@ -29,7 +35,14 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(175, 162, 221);
+}
+
+p {
+    margin: 20px auto;
 }
 
 button {
@@ -45,13 +58,16 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 70vh;
     margin: 6vh auto;
     background-color: rgba(20, 20, 20, 0.11);
     border-radius: 20px;
+    width: 95%;
 }
 
 .videoSize {
+    height: 55vh;
     width: 800px;
 }
 
@@ -83,6 +99,7 @@ button {
 
     .video_Container {
         flex-direction: column;
+        background-color: rgba(20, 20, 20, 0);
     }
 }
 
