--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -8,6 +8,7 @@ footer {
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 8vh;
+    width: 95%;
 }
 
 @keyframes gradient {
