--- a/src/style/index.css
+++ b/src/style/index.css
@@ -10,6 +10,11 @@ body {
           animation: gradient 15s ease infinite;
 }
 
+* {
+  margin: 0;
+  font-family: "Josefin Sans", sans-serif;
+}
+
 @-webkit-keyframes gradient {
   0% {
     background-position: 0% 50%;
@@ -39,7 +44,14 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(175, 162, 221);
+}
+
+p {
+  margin: 20px auto;
 }
 
 button {
@@ -55,13 +67,16 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: 70vh;
   margin: 6vh auto;
   background-color: rgba(20, 20, 20, 0.11);
   border-radius: 20px;
+  width: 95%;
 }
 
 .videoSize {
+  height: 55vh;
   width: 800px;
 }
 
@@ -91,6 +106,7 @@ button {
   }
   .video_Container {
     flex-direction: column;
+    background-color: rgba(20, 20, 20, 0);
   }
 }
 @media only screen and (max-width: 350px) {
@@ -122,6 +138,7 @@ header {
   -webkit-animation: gradient 15s ease infinite;
           animation: gradient 15s ease infinite;
   border-radius: 20px;
+  width: 95%;
 }
 
 footer {
@@ -135,6 +152,7 @@ footer {
   -webkit-animation: gradient 15s ease infinite;
           animation: gradient 15s ease infinite;
   height: 8vh;
+  width: 95%;
 }
 
 @keyframes gradient {
